# madr

./: .gitignore  pyproject.toml
madrs/: app.py  models.py  schemas.py
madrs/routers/: contas.py  livros.py  romancistas.py
migrations/: env.py
migrations/versions/: b0423a2e579f_create_table.py
tests/: conftest.py  test_contas.py
